Flexbox gap safari fix

--- a/Reskill_Challenge/starter/09m-Omnifood-Optimizations/css/style.css
+++ b/Reskill_Challenge/starter/09m-Omnifood-Optimizations/css/style.css
@@ -27,8 +27,7 @@
   display: flex;
   align-items: center;
 
-  gap: 3.2rem;
-  /* safari fix */
+  gap: 4.8rem;
 }
 
 .main-nav-link:link,
